# mgba

./: .gitignore  CHANGES  CMakeLists.txt  README.md  README_DE.md  bizhawk-make-install.sh  version.cmake
include/mgba-util/: dllexports.h  ring-fifo.h  socket.h
include/mgba/core/: core.h  interface.h
include/mgba/debugger/: debugger.h
src/arm/: arm.h  decoder.c
src/arm/debugger/: debugger.c
src/core/: core.c  interface.c  log.c  thread.c
src/debugger/: cli-debugger.c  debugger.h
src/ds/gx/: software.c
src/feature/ffmpeg/: ffmpeg-encoder.c
src/feature/gui/: gui-runner.c
src/gb/: audio.c  core.c  gb.c  gb.h  io.c  mbc.c  memory.c  video.c  video.h
src/gb/debugger/: debugger.c
src/gba/: audio.c  cheats.c  core.c  gba.c  memory.c  memory.h  video.c  video.h
src/gba/cheats/: gameshark.c  parv3.c
src/gba/extra/: audio-mixer.c
src/gba/renderers/: obj-cache.c  obj-cache.h  thread-proxy.c  video-software.c
src/lr35902/debugger/: debugger.c
src/netplay/: netplay-private.h  netplay.c  server.c
src/platform/3ds/: CMakeLists.txt  forwarder.c  forwarder.rsf  main.c
src/platform/bizhawk/: base.mak  bizinterface.c
src/platform/psp2/: psp2-context.c
src/platform/qt/: CMakeLists.txt  CoreController.cpp  DebugModeContext.cpp  DebugModeContext.h  Debugger.cpp  Debugger.h  DebuggerController.cpp  DisassemblyModel.cpp  DisassemblyModel.h  DisassemblyView.cpp  DisassemblyView.h  DisplayGL.cpp  DisplayGL.h  GBAApp.cpp  GBAApp.h  GIFView.cpp  GameController.cpp  GameController.h  InputController.cpp  NetplayController.cpp  (+18 more)
src/platform/wasm/: .gitignore  CMakeLists.txt  README.md  index.html  main.c  main.h  memory.c  mgba.d.ts  package.json  pre.js
src/platform/wasm/docker/: Dockerfile
src/util/: ring-fifo.c  table.c  table.h
(+18 files in other folders)
